--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@erc7824/nitrolite": "0.0.3",
     "@radix-ui/react-dialog": "1.1.13",
     "@radix-ui/react-label": "2.1.6",
     "@radix-ui/react-slot": "1.2.2",
@@ -20,7 +21,8 @@
     "lucide-react": "0.510.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "uuid": "11.1.0"
+    "uuid": "11.1.0",
+    "viem": "2.29.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
