--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,11 @@
     "lint": "eslint src/**/*.js"
   },
   "dependencies": {
+    "@erc7824/nitrolite": "0.0.3",
+    "dotenv": "16.5.0",
+    "ethers": "^6.11.1",
     "uuid": "^9.0.1",
+    "viem": "^2.7.15",
     "ws": "^8.16.0"
   },
   "devDependencies": {
