--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@erc7824/nitrolite": "0.0.3",
+    "chalk": "5.4.1",
     "dotenv": "16.5.0",
     "ethers": "^6.11.1",
     "uuid": "^9.0.1",
