--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 # Nitro Aura Server Environment Variables
 
 # WebSocket URL for the Nitrolite service
-WS_URL=wss://clearnode-multichain-production.up.railway.app/ws
+WS_URL=wss://canarynet.yellow.com/ws
 
 # Server private key (replace with your actual private key)
 SERVER_PRIVATE_KEY=0xYOUR_PRIVATE_KEY
